fix(*): company name was not aligned properly

--- a/src-ebleague/styles.scss
+++ b/src-ebleague/styles.scss
@@ -231,6 +231,7 @@ $action-strip-theme: igx-action-strip-theme($actions-background: transparent);
 .registration-slot > a,
 .registration-slot > span {
   font-size: 0.80rem;
+  text-align: center;
 }
 
 .registration-badge-style {
